fix: Syling bug in SheltersCardDetailedView and SheltersMap on mobile devices (location items & directions button)

--- a/client/src/components/SheltersCardDetailedView/SheltersCardDetailedView.scss
+++ b/client/src/components/SheltersCardDetailedView/SheltersCardDetailedView.scss
@@ -20,6 +20,7 @@
 
   @include mobile {
     height: 36vh;
+    width: 100%;
   }
 
   @include tablet {
